k8s/osms-nrod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: osms-nrod-deployment
  labels:
    app: osms-nrod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: osms-nrod
  template:
    metadata:
      labels:
        app: osms-nrod
    spec:
      containers:
      - name: osms-nrod
        image: gcr.io/trainsplorer/osms-nrod:latest
