k8s/osms-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: osms-web-deployment
  labels:
    app: osms-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: osms-web
  template:
    metadata:
      labels:
        app: osms-web
    spec:
      containers:
      - name: osms-web
        image: gcr.io/trainsplorer/osms-web:latest
