k8s/tspl-darwin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tspl-darwin
  namespace: tspl
  labels:
    app: tspl-darwin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tspl-darwin
  strategy:
    type: Recreate
  template:
    metadata:
      namespace: tspl
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: tspl-darwin
    spec:
      containers:
      - name: tspl-nrod
        image: gcr.io/trainsplorer/tspl-nrod:latest
        resources:
          limits:
            cpu: "0.3"
          requests:
            cpu: "0.2"
            memory: "100Mi"
