k8s/tspl-nrod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tspl-nrod
  namespace: tspl
  labels:
    app: tspl-nrod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tspl-nrod
  strategy:
    type: Recreate
  template:
    metadata:
      namespace: tspl
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: tspl-nrod
    spec:
      containers:
      - name: tspl-nrod
        image: gcr.io/trainsplorer/tspl-nrod:latest
        resources:
          limits:
            cpu: "0.15"
          requests:
            cpu: "0.05"
