k8s/osms-web-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: osms-web-svc
spec:
  selector:
    app: osms-web
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    nodePort: 30509
