k8s/tspl-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: tspl-web
  namespace: tspl
  labels:
    app: tspl-web
spec:
  type: NodePort
  ports:
  - port: 80
    name: rpc
  selector:
    app: tspl-web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tspl-web
  namespace: tspl
  labels:
    app: tspl-web
spec:
  selector:
    matchLabels:
      app: tspl-web
  replicas: 2
  template:
    metadata:
      namespace: tspl
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: tspl-web
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: tspl-web
        image: gcr.io/trainsplorer/tspl-web:latest
        resources:
          requests:
            cpu: "0.01"
        ports:
        - containerPort: 80
          name: rpc
        volumeMounts:
          - name: service-account
            mountPath: /tspl/nennen_service_account.json
            subPath: nennen_service_account.json
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 3
      volumes:
        - name: service-account
          secret:
            secretName: tspl-secrets
