k8s/tspl-zugfuhrer.yaml
apiVersion: v1
kind: Service
metadata:
  name: tspl-zugfuhrer
  namespace: tspl
  labels:
    app: tspl-zugfuhrer
spec:
  type: NodePort
  ports:
  - port: 80
    name: rpc
  - port: 3000
    name: live
  selector:
    app: tspl-zugfuhrer
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tspl-zugfuhrer
  namespace: tspl
spec:
  selector:
    matchLabels:
      app: tspl-zugfuhrer
  replicas: 1
  serviceName: tspl-zugfuhrer
  template:
    metadata:
      namespace: tspl
      annotations:
        linkerd.io/inject: enabled
        config.linkerd.io/skip-inbound-ports: "3000"
      labels:
        app: tspl-zugfuhrer
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: tspl-zugfuhrer
        image: gcr.io/trainsplorer/tspl-zugfuhrer:latest
        ports:
        - containerPort: 80
          name: rpc
        resources:
          limits:
            cpu: "0.7"
            memory: "600Mi"
          requests:
            cpu: "0.35"
            memory: "300Mi"
        volumeMounts:
        - name: zugfuhrer-data
          mountPath: /data/
  volumeClaimTemplates:
  - metadata:
      name: zugfuhrer-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: faster
      resources:
        requests:
          storage: 100Gi
